--- a/support/support.html
+++ b/support/support.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -92,9 +95,7 @@
             <a class="nav-link" href="/scholarships/scholarship.html" onclick="setActiveLink(this)">
               Scholarships
             </a>
-
           </li>
-
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle active" href="#" onclick="setActiveLink(this)" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
@@ -275,7 +276,7 @@
             </div>
           </div>
 
-          <div class="social-media">
+          <!-- <div class="social-media">
             <p>Connect with us :</p>
             <div class="social-icons">
               <a href="#" class="icons">
@@ -291,7 +292,7 @@
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div class="contact-form">
