modified:   become a mentor/becomeMentor.html

--- a/become a mentor/becomeMentor.html
+++ b/become a mentor/becomeMentor.html
@@ -38,7 +38,7 @@
     <main class="flex-shrink-0">
         <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand mx-4" href="#">
+                <a class="navbar-brand mx-4" href="/index.html">
                     <img src="../assets/logo.png" style="height: 60px" alt="owl" />
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
